--- a/custom.css
+++ b/custom.css
@@ -4,5 +4,17 @@
     color:#fcc500;
     font-size: 45px;
   }
+  .img-fluid{
+    max-width: 300px;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 100%;
+    
+
+    
+  }
   
   
